[project]
name = "odoo-addons-oca-multi-company"
version = "17.0.20240725.0"
dependencies = [
    "odoo-addon-base_multi_company>=17.0dev,<17.1dev",
    "odoo-addon-mail_multicompany>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
